language/move-lang/tests/move_check/translated_ir_tests/generics/instantiation_loops/nested_types_1.exp
error: 

   ┌── tests/move_check/translated_ir_tests/generics/instantiation_loops/nested_types_1.move:5:9 ───
   │
 5 │         foo<S<S<T>>>()
   │         ^^^^^^^^^^^^^^ Invalid call to '0x8675309::M::foo'
   │             ------- The type parameter 'foo::T' was instantiated with the type '0x8675309::M::S<0x8675309::M::S<T>>', which contains the type parameter 'foo::T'. This recursive call causes the instantiation to recurse infinitely
   │

