language/move-lang/tests/move_check/translated_ir_tests/generics/instantiation_loops/nested_types_1.move
module M {
    struct S<T> { b: bool }

    fun foo<T>() {
        foo<S<S<T>>>()
    }
}
